--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "homepage": "https://Venkata-Balaji-22.github.io/PetService",
   "name": "project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Building the project...\""
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "start": "node server.js",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
