--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "mongoose": "^8.7.2"
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "mongoose": "^8.13.2"
   }
 }
