--- a/frontend/sampleapp/package.json
+++ b/frontend/sampleapp/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "node server.js",
+    "start": "node app.js",
     "build": "react-scripts build"
   },
   "eslintConfig": {
