--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "node server.js",
+    "start": "node app.js",
     "build": "react-scripts build"
   },
   "dependencies": {
